--- a/About.html
+++ b/About.html
@@ -31,7 +31,7 @@
     <div id="mobile-menu" class="hidden md:hidden bg-white shadow-md">
       <nav class="flex flex-col items-center py-4">
         <a href="index.html" class="nav-link text-gray-800 hover:bg-green-500 hover:text-white px-3 py-2 rounded transition w-full text-center">Home</a>
-        <a href="about.html" class="nav-link text-gray-800 hover:bg-green-500 hover:text-white px-3 py-2 rounded transition w-full text-center">About</a>
+        <a href="About.html" class="nav-link text-gray-800 hover:bg-green-500 hover:text-white px-3 py-2 rounded transition w-full text-center">About</a>
         <a href="products.html" class="nav-link text-gray-800 hover:bg-green-500 hover:text-white px-3 py-2 rounded transition w-full text-center">Our Products</a>
         <a href="contact.html" class="nav-link text-gray-800 hover:bg-green-500 hover:text-white px-3 py-2 rounded transition w-full text-center">Contact</a>
       </nav>
@@ -214,17 +214,13 @@
   </footer>
 
 <script>
-  document.addEventListener('DOMContentLoaded', function () {
-    const menuToggle = document.getElementById('menu-toggle');
-    const mobileMenu = document.getElementById('mobile-menu');
-
-    if (menuToggle && mobileMenu) {
-      menuToggle.addEventListener('click', () => {
-        mobileMenu.classList.toggle('hidden');
-      });
-    }
+  const menuToggle = document.getElementById('menu-toggle');
+  const mobileMenu = document.getElementById('mobile-menu');
+  menuToggle.addEventListener('click', () => {
+    mobileMenu.classList.toggle('hidden');
   });
 </script>
+
 
 </body>
 </html>
