--- a/About.html
+++ b/About.html
@@ -19,7 +19,7 @@
       </div>
       <nav class="hidden md:flex space-x-6">
         <a href="index.html" class="nav-link text-gray-800 hover:bg-green-500 hover:text-white px-3 py-2 rounded transition">Home</a>
-        <a href="about.html" class="nav-link text-gray-800 hover:bg-green-500 hover:text-white px-3 py-2 rounded transition">About</a>
+        <a href="About.html" class="nav-link text-gray-800 hover:bg-green-500 hover:text-white px-3 py-2 rounded transition">About</a>
         <a href="products.html" class="nav-link text-gray-800 hover:bg-green-500 hover:text-white px-3 py-2 rounded transition">Our Products</a>
         <a href="contact.html" class="nav-link text-gray-800 hover:bg-green-500 hover:text-white px-3 py-2 rounded transition">Contact</a>
       </nav>
